refactor: 使用Stream.toList()